package app.controller;

import app.domain.model.VaccinationCenter;
import app.domain.model.Vaccine;
import app.domain.model.SNSUser;

public class ScheduleVaccineController {

    private VaccinationCenter vc;
    private Vaccine v;
    private SNSUser snsu;

}
